test/data/resolver/valid/node_property_nullable_int.cypher
MATCH (p:Person) RETURN p.age
