test/data/resolver/invalid/aggregate_projection.cypher
MATCH (p:Person) RETURN count(p)
